@@ -1,3 +1,15 @@
+'''
+Defines the manager for global hot keys.
+
+@author: Eitan Isaacson
+@organization: IBM Corporation
+@copyright: Copyright (c) 2006, 2007 IBM Corporation
+@license: BSD
+
+All rights reserved. This program and the accompanying materials are made 
+available under the terms of the BSD which accompanies this distribution, and 
+is available at U{http://www.opensource.org/licenses/bsd-license.php}
+'''
 import gtk, gconf
 from pyLinAcc import Constants
 
