@@ -1,5 +1,13 @@
 2007-03-27  Eitan Isaacson  <eitan@ascender.com>
 
+	* src/lib/accerciser/__init__.py: Added me as author.
+	* src/lib/accerciser/script_playback.py: A wait loop for getting
+	application focus. This is neccessary if the application takes
+	time to start up.
+	* src/lib/accerciser/hotkey_manager.py:	Added file header.
+	
+2007-03-27  Eitan Isaacson  <eitan@ascender.com>
+
 	* src/lib/accerciser/accerciser.py: 
 	* src/lib/accerciser/hotkey_manager.py: Use key code instead of
 	textual representation.
